# FL_Hornet

./: .gitignore  README.md  pyproject.toml
metrics/: client_0_curve.jsonl  client_0_val_curve.jsonl  client_1_curve.jsonl  client_1_val_curve.jsonl  client_2_curve.jsonl  client_2_val_curve.jsonl  client_3_curve.jsonl  client_3_val_curve.jsonl  client_4_curve.jsonl  client_4_val_curve.jsonl  client_5_curve.jsonl  client_5_val_curve.jsonl  client_6_curve.jsonl  client_6_val_curve.jsonl  client_7_val_curve.jsonl  client_8_val_curve.jsonl  client_9_val_curve.jsonl
new_app/: __init__.py  client_app.py  plot_metrics.py  server_app.py  task.py
