[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "new-app"
version = "1.0.0"
description = ""
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]>=1.18.0",
    "flwr-datasets[vision]>=0.5.0",
    "torch==2.5.1",
    "torchvision==0.20.1",
    "scikit-learn==1.7.1",
    "wfdb==4.3.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "cobra"

[tool.flwr.app.components]
serverapp = "new_app.server_app:app"
clientapp = "new_app.client_app:app"

[tool.flwr.app.config]
num-server-rounds = 10
fraction-fit = 0.5
local-epochs = 10

[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 10
